fixes and changes

--- a/pypbi/api_calls.yaml
+++ b/pypbi/api_calls.yaml
@@ -1,9 +1,10 @@
+get_groups: groups
 get_datasets: datasets
 get_reports: reports
 get_report_token: reports/{report_id}/GenerateToken
 get_dashboards: dashboards
 get_dashboard_token: dashboard/{dashboard_id}/GenerateToken
 get_dataset_by_id: datasets/{ds_id}
-get_tables: /datasets/{ds_id}/tables
-delete_table_rows: /datasets/{ds_id}/tables/{tbl_name}/rows
+get_tables: datasets/{ds_id}/tables
+delete_table_rows: datasets/{ds_id}/tables/{tbl_name}/rows
 
