added embedUrl and tiles

--- a/pypbi/api_calls.yaml
+++ b/pypbi/api_calls.yaml
@@ -7,4 +7,6 @@ get_dashboard_token: dashboards/{dashboard_id}/GenerateToken
 get_dataset_by_id: datasets/{ds_id}
 get_tables: datasets/{ds_id}/tables
 delete_table_rows: datasets/{ds_id}/tables/{tbl_name}/rows
+get_tiles: dashboards/{dashboard_id}/tiles
+get_tile_token: https://api.powerbi.com/v1.0/myorg/groups/{wks_id}/dashboards/{dashboard_id}/tiles/{tile_id}/GenerateToken
 
